# agent

./: INSTALLATION_GUIDE.md  README.md  app.py  install_and_run.sh  main.py  pyproject.toml  requirements.txt  run_slack.sh  run_ui.sh
docs/: DEPLOYMENT.md  ENVIRONMENT_SETUP.md  GOOGLE_CLOUD_DEPLOYMENT.md  QUICKSTART.md  README.md
mrs-salesforce/: .gitignore  GET_SALESFORCE_CREDENTIALS.md  OAUTH_SETUP.md  SLACK_SETUP.md  TESTING.md  app.py  config.py  fields.csv  fields.xlsx  main.py  pyproject.toml  requirements.txt  slack_app.py  slack_bot.py  summary.docx  test_agent.py  transcript.docx
mrs-salesforce/.streamlit/: config.toml
sales-trainer-agent/: agent.py  app.py  claude_llm.py  main.py  rubric.json  scoring_framework.py  transcriber.py
sales-trainer-agent/data/: transcript.txt
src/: adk_handler.py  adk_integration_example.py  agent.py  app.py  config.py  models.py  sales_trainer_agent.py  salesforce_client.py  salesforce_formatter.py  salesforce_ui.py  tools.py  trainer_ui.py  transcript_processor.py  utils.py
